{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 123,
  "lineage": "e99f9e3c-7971-c46f-426d-41b9763002c9",
  "resources": [
    {
      "module": "module.myec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c6e771",
            "arn": "arn:aws:ec2:us-west-2:932716035065:instance/i-0ae145657034f1a51",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ae145657034f1a51",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_root@splunk1",
            "monitoring": false,
            "primary_network_interface_id": "eni-055f13a15cae61c64",
            "private_dns": "ip-10-85-2-46.us-west-2.compute.internal",
            "private_ip": "10.85.2.46",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 0,
                "volume_id": "vol-03767d8efb962c3a7",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c68b9587a3fab54",
            "tags": {
              "Stage": "Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07e318ef63e196be1"
            ]
          },
          "depends_on": [
            "aws_key_pair.this",
            "aws_security_group.allow_ssh_private[0]"
          ]
        }
      ]
    },
    {
      "module": "module.myec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09c6e771",
            "arn": "arn:aws:ec2:us-west-2:932716035065:instance/i-0f88865800a43c03f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f88865800a43c03f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_root@splunk1",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b075f68f9ebf842d",
            "private_dns": "ip-10-85-1-153.us-west-2.compute.internal",
            "private_ip": "10.85.1.153",
            "public_dns": "ec2-54-202-212-71.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.212.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 0,
                "volume_id": "vol-009b7b576efb67c59",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b7c4942904eced8",
            "tags": {
              "Stage": "Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09607555c858fc80f"
            ]
          },
          "depends_on": [
            "aws_key_pair.this",
            "aws_security_group.allow_ssh_public[0]"
          ]
        }
      ]
    },
    {
      "module": "module.myec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "win_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050dcb8e011509b82",
            "arn": "arn:aws:ec2:us-west-2:932716035065:instance/i-0faf9a0d1040ab4b4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0faf9a0d1040ab4b4",
            "instance_state": "running",
            "instance_type": "m4.large",
            "ipv6_address_count": 0,
            "key_name": "key_root@splunk1",
            "monitoring": false,
            "primary_network_interface_id": "eni-0177a0dd0d6c79df5",
            "private_dns": "ip-10-30-1-45.us-west-2.compute.internal",
            "private_ip": "10.30.1.45",
            "public_dns": "ec2-35-167-131-116.us-west-2.compute.amazonaws.com",
            "public_ip": "35.167.131.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0ff3e02e27f785ba1",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05ad7ce22a97c4c5a",
            "tags": {
              "Stage": "Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0473c55dbab182d14",
              "sg-072965889929f4e13"
            ]
          },
          "depends_on": [
            "aws_key_pair.this",
            "aws_security_group.allow_rdp_public[1]",
            "aws_security_group.allow_ssh_public[1]"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c573790ab4b35e9f",
            "owner_id": "932716035065",
            "tags": {
              "Name": "vpc-1-igw",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e0a1c1e33d4e517f"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a12cbc18f80a9101",
            "owner_id": "932716035065",
            "tags": {
              "Name": "vpc-2-igw",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e5383b2568de10d5"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00039ec175731d05e",
            "owner_id": "932716035065",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.30.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0fa95f9cf85d2f415"
              }
            ],
            "tags": {
              "Name": "vpc-1-private_route_table",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e0a1c1e33d4e517f"
          },
          "depends_on": [
            "aws_vpc.this",
            "aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e58ac5b62f5cfae0",
            "owner_id": "932716035065",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.85.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0fa95f9cf85d2f415"
              }
            ],
            "tags": {
              "Name": "vpc-2-private_route_table",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e5383b2568de10d5"
          },
          "depends_on": [
            "aws_vpc.this",
            "aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07c2f34efc3b88898",
            "owner_id": "932716035065",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c573790ab4b35e9f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.30.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0fa95f9cf85d2f415"
              }
            ],
            "tags": {
              "Name": "vpc-1-public_route_table",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e0a1c1e33d4e517f"
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_vpc.this",
            "aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c43b97a1ee5db78c",
            "owner_id": "932716035065",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a12cbc18f80a9101",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.85.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-0fa95f9cf85d2f415"
              }
            ],
            "tags": {
              "Name": "vpc-2-public_route_table",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e5383b2568de10d5"
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_vpc.this",
            "aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df4c7e8be70833eb",
            "route_table_id": "rtb-00039ec175731d05e",
            "subnet_id": "subnet-06c68b9587a3fab54"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020fc3cf852884373",
            "route_table_id": "rtb-0e58ac5b62f5cfae0",
            "subnet_id": "subnet-092eb7621dc51ed78"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05de044415aec05da",
            "route_table_id": "rtb-07c2f34efc3b88898",
            "subnet_id": "subnet-02b7c4942904eced8"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb7ffcfb98a5e64e",
            "route_table_id": "rtb-0c43b97a1ee5db78c",
            "subnet_id": "subnet-05ad7ce22a97c4c5a"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.myec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_rdp_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:security-group/sg-0084952f20b25c413",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0084952f20b25c413",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_rdp_public-vpc-0e0a1c1e33d4e517f",
            "name_prefix": null,
            "owner_id": "932716035065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Stage": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0a1c1e33d4e517f"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:security-group/sg-0473c55dbab182d14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0473c55dbab182d14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_rdp_public-vpc-0e5383b2568de10d5",
            "name_prefix": null,
            "owner_id": "932716035065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Stage": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5383b2568de10d5"
          }
        }
      ]
    },
    {
      "module": "module.myec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:security-group/sg-07e318ef63e196be1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e318ef63e196be1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.85.0.0/16",
                  "10.30.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.85.0.0/16",
                  "10.30.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ssh_private-vpc-0e0a1c1e33d4e517f",
            "name_prefix": null,
            "owner_id": "932716035065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Stage": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0a1c1e33d4e517f"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:security-group/sg-0c28331dbfda470c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c28331dbfda470c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.85.0.0/16",
                  "10.30.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.85.0.0/16",
                  "10.30.0.0/16"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ssh_private-vpc-0e5383b2568de10d5",
            "name_prefix": null,
            "owner_id": "932716035065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Stage": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5383b2568de10d5"
          }
        }
      ]
    },
    {
      "module": "module.myec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:security-group/sg-09607555c858fc80f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09607555c858fc80f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ssh_public-vpc-0e0a1c1e33d4e517f",
            "name_prefix": null,
            "owner_id": "932716035065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Stage": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0a1c1e33d4e517f"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:security-group/sg-072965889929f4e13",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072965889929f4e13",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ssh_public-vpc-0e5383b2568de10d5",
            "name_prefix": null,
            "owner_id": "932716035065",
            "revoke_rules_on_delete": false,
            "tags": {
              "Stage": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5383b2568de10d5"
          }
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:subnet/subnet-06c68b9587a3fab54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.85.2.0/24",
            "id": "subnet-06c68b9587a3fab54",
            "map_public_ip_on_launch": false,
            "owner_id": "932716035065",
            "tags": {
              "Name": "vpc-1-subnet-private",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e0a1c1e33d4e517f"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:subnet/subnet-092eb7621dc51ed78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.30.2.0/24",
            "id": "subnet-092eb7621dc51ed78",
            "map_public_ip_on_launch": false,
            "owner_id": "932716035065",
            "tags": {
              "Name": "vpc-2-subnet-private",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e5383b2568de10d5"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:subnet/subnet-02b7c4942904eced8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.85.1.0/24",
            "id": "subnet-02b7c4942904eced8",
            "map_public_ip_on_launch": true,
            "owner_id": "932716035065",
            "tags": {
              "Name": "vpc-1-subnet-public",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e0a1c1e33d4e517f"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:subnet/subnet-05ad7ce22a97c4c5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.30.1.0/24",
            "id": "subnet-05ad7ce22a97c4c5a",
            "map_public_ip_on_launch": true,
            "owner_id": "932716035065",
            "tags": {
              "Name": "vpc-2-subnet-public",
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e5383b2568de10d5"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:vpc/vpc-0e0a1c1e33d4e517f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.85.0.0/16",
            "default_network_acl_id": "acl-0063a2a5af931bec8",
            "default_route_table_id": "rtb-0e2c569fa09134938",
            "default_security_group_id": "sg-04e0a9c95ba4f41a5",
            "dhcp_options_id": "dopt-bbfa16c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e0a1c1e33d4e517f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e2c569fa09134938",
            "owner_id": "932716035065",
            "tags": {
              "Name": "vpc-1",
              "Stage": "Test"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:932716035065:vpc/vpc-0e5383b2568de10d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0f8e1c27aa1387d19",
            "default_route_table_id": "rtb-049df67c706e1a3ea",
            "default_security_group_id": "sg-06a0a0db8122e6c1f",
            "dhcp_options_id": "dopt-bbfa16c3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e5383b2568de10d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-049df67c706e1a3ea",
            "owner_id": "932716035065",
            "tags": {
              "Name": "vpc-2",
              "Stage": "Test"
            }
          }
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0fa95f9cf85d2f415",
            "peer_owner_id": "932716035065",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0e5383b2568de10d5",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": true,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Stage": "Test"
            },
            "vpc_id": "vpc-0e0a1c1e33d4e517f"
          },
          "depends_on": [
            "aws_vpc.this[0]",
            "aws_vpc.this[1]"
          ]
        }
      ]
    }
  ]
}